# pisilinux-theme-maia-light

./: CMakeLists.txt  README.md
Maia-Light/: CMakeLists.txt  colors  metadata.json
colors/: MaiaLight.colors
icons/: CMakeLists.txt  index.theme
lookandfeel/contents/: defaults
lookandfeel/contents/splash/: Splash.qml
wallpapers/: CMakeLists.txt
